test/functions/deitz/test_param_function_with_loop.good
test_param_function_with_loop.chpl:1: In function 'foo':
test_param_function_with_loop.chpl:3: error: param function cannot contain a non-param while loop
