test/functions/deitz/test_param_function_with_loop.chpl
proc foo(i: int) param {
  var ii: int;
  while ii < i {
    ii += 1;
  }
  return 2;
}

writeln(foo(3));
